tests/invalid_programs/call_param_type_mismatch.con
mod Test {
    fn main() -> i32 {
        let x: u32 = 1;
        return hello(x);
    }

    fn hello(a: i32) -> i32 {
        return a * 2;
    }
}
